syntax = "proto3";
import "google/protobuf/empty.proto";

service BikeBookingServiceGrpc {
  rpc GetBikeRentingStatistics (BikeBookingGetStatisticsRequest) returns (BikeBookingGetStatisticsResponse);
  rpc GetBikeRentingChartData (google.protobuf.Empty) returns (GetRentingChartDataResponse);
  rpc GetTopThreeBikeHasBeenRent (google.protobuf.Empty) returns (GetTopThreeBikeHasBeenRentResponse);
  rpc GetTopThreeAccountRenting (google.protobuf.Empty) returns (GetTopThreeAccountRentingResponse);
  rpc GetTotalTimesRentingByBikeStation (google.protobuf.Empty) returns (GetTotalTimesRentingByBikeStationResponse);
}

message BikeBookingGetStatisticsRequest {
  string filterType = 1;
}

message BikeBookingGetStatisticsResponse {
  double total = 1;
  double rateCompare = 2;
}

message GetRentingChartDataResponse {
  repeated int32 chartData = 1;
}

message GetTopThreeBikeHasBeenRentResponse {
  repeated BikeRent topThreeBikeRent = 1;
}

message BikeRent {
  int32 bikeId = 1;
  string bikeLicensePlate = 2;
  int32 totalRentingTimes = 3;
  double totalRentingPoint = 4;
}

message GetTopThreeAccountRentingResponse {
  repeated AccountRent topThreeAccountRent = 1;
}

message AccountRent {
  string phoneNumber = 1;
  int32 totalRentingTimes = 2;
  double totalRentingPoint = 3;
}

message GetTotalTimesRentingByBikeStationResponse {
  repeated TotalTimesRentingByBikeStation result = 1;
}

message TotalTimesRentingByBikeStation {
  string bikeStation = 1;
  double percentage = 2;
}
